testdata/baselines/reference/submodule/compiler/checkJsdocTypeTagOnExportAssignment2.errors.txt
b.js(2,16): error TS2739: Type '{ c: boolean; }' is missing the following properties from type 'Foo': a, b


==== a.ts (0 errors) ====
    export interface Foo {
        a: number;
        b: number;
    }
    
==== b.js (1 errors) ====
    /** @type {import("./a").Foo} */
    export default { c: false };
                   ~~~~~~~~~~~~
!!! error TS2739: Type '{ c: boolean; }' is missing the following properties from type 'Foo': a, b
    
==== c.js (0 errors) ====
    import b from "./b";
    b;
    